plugins {
    id 'java'
//    id 'org.springframework.boot' version '3.0.2'
//    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.springframework.boot' version '2.7.3'
//    id 'org.springframework.experimental.aot' version '0.12.1'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
}

group = 'org.cardanofoundation'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
//    set('springShellVersion', "3.0.0")
    set('springShellVersion', "2.1.1")
}

dependencies {
    implementation 'org.springframework.shell:spring-shell-starter'
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects'
    implementation 'com.bloxbean.cardano:cardano-client-lib:0.4.4-SNAPSHOT'
    implementation 'com.bloxbean.cardano:cardano-client-backend-blockfrost:0.4.3'
    implementation 'com.bloxbean.cardano:aiken-java-binding:0.0.2'
    implementation("com.google.guava:guava:31.1-jre")
    implementation("org.cardanofoundation:merkle-tree-java:0.0.1-SNAPSHOT")
    implementation("io.projectreactor:reactor-core:3.5.3")

    implementation("org.cardanofoundation:hydra-java-client:0.0.2-SNAPSHOT")

    implementation 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    testImplementation 'org.projectlombok:lombok:1.18.26'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.shell:spring-shell-dependencies:${springShellVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
